2011-10-29  Torvald Riegel  <triegel@redhat.com>

	* beginend.cc (GTM::gtm_thread::rollback): Add aborting flag and
	handle aborts.
	(_ITM_abortTransaction): Handle aborts of outer transactions.
	* libitm_i.h: Same.
	* eh_cpp.cc (GTM::gtm_thread::revert_cpp_exceptions): Fix assertion.
	* libitm.texi: Document aborts of outer transactions.
	* testsuite/libitm.c/cancel.c: New file.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* testsuite/*: Change __transaction to __transaction_atomic or
	__transaction_relaxed.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* config/linux/x86/tls.h (abi_disp): Make TLS slot read volatile.
	(gtm_thr): Same.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* libitm_i.h: Add gl_wt dispatch.
	* retry.cc (parse_default_method): Same.
	* method-gl.cc: New file.
	* Makefile.am: Use method-gl.cc.
	* Makefile.in: Rebuild.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* beginend.cc (GTM::gtm_thread::trycommit): Ensure privatization
	safety if requested by a TM method.
	* dispatch.h (GTM::abi_dispatch::trycommit): Add parameter for
	privatization safety.
	* method-serial.cc: Same.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* libitm_i.h: Renamed gtm_local_undo to gtm_undolog_entry.
	(GTM::gtm_thread): Renamed local_undo to undolog. Renamed
	undolog-related member functions from *_local to *_undolog.
	* local.cc (gtm_thread::commit_undolog): Same.
	* beginend.cc (GTM::gtm_thread::trycommit): Same.
	(GTM::gtm_thread::rollback): Roll back undolog before
	dispatch-specific rollback.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* retry.cc (GTM::gtm_thread::decide_retry_strategy): Handle
	re-initialization of the current method group.
	* libitm_i.h (GTM::gtm_restart_reason): Add restart reason for this.

2011-10-19  Torvald Riegel  <triegel@redhat.com>

	* alloc.cc (commit_allocations_2): Do not free transaction-local
	memory when committing a nested transaction.

2011-10-19  Torvald Riegel  <triegel@redhat.com>
